fix: sam inference feat: add get_folder_path function for inference chore: change rosia-association to association-rosia-demo for demonstration purpose

--- a/0.0-rosia-segmenting-subsurface.ipynb
+++ b/0.0-rosia-segmenting-subsurface.ipynb
@@ -75,6 +75,7 @@
     "# Custom package (accessible into src directory)\n",
     "from src import utils\n",
     "import src.visualization.utils as vutils\n",
+    "import src.data.make_dataset as md\n",
     "import src.models.segformer.train_model as segformer_tm\n",
     "import src.models.mask2former.train_model as mask2former_tm\n",
     "import src.features.segment_anything_inference as sam_inf\n",
@@ -95,9 +96,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wandb_api_key = '02ca932e1203e93aaa8c97b8331d6c0b04c3170a'\n",
-    "! WANDB_MODE=offline\n",
-    "! WANDB_API_KEY={wandb_api_key}"
+    "# WandB Initialisation \n",
+    "wandb_api_key = '02ca932e1203e93aaa8c97b8331d6c0b04c3170a' # Please do not share this api key\n",
+    "! wandb login --relogin {wandb_api_key}"
    ]
   },
   {
@@ -291,7 +292,7 @@
     "    list_volume=[volume_path],\n",
     "    run=None,\n",
     "    split='train',\n",
-    "    batch=15 # Reduce the batch size if you encounter cuda memory issues running the inference. Max 300\n",
+    "    batch=5 # Reduce the batch size if you encounter cuda memory issues running the inference. Min 2 Max 300\n",
     ")\n",
     "volume_name = os.path.basename(volume_path)\n",
     "binary_mask_path = sam_inference.get_mask_path(volume_name)\n",
@@ -332,7 +333,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We used SAM without fine-tuning because it provided sufficient predictions for our pipeline."
+    "We used SAM without fine-tuning because it provided sufficient predictions for our pipeline.\n",
+    "\n",
+    "If you wish to create binary masks using SAM model from our solution, uncomment the following line and run the cell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_volume = md.get_volumes(config, 'test')\n",
+    "sam_inference = sam_inf.SAMInference(\n",
+    "    config=config,\n",
+    "    cuda_idx=0,\n",
+    "    list_volume=list_volume,\n",
+    "    run=None,\n",
+    "    split='test',\n",
+    "    batch=5\n",
+    ")\n",
+    "\n",
+    "sam_dir = sam_inference.get_folder_path()\n",
+    "os.makedirs(sam_dir, exist_ok=True)\n",
+    "sam_inference()\n",
+    "\n",
+    "del sam_inference"
    ]
   },
   {
@@ -403,7 +429,7 @@
     "    list_volume=[volume_path],\n",
     "    run=run,\n",
     "    split='train',\n",
-    "    batch=300 # Reduce the batch size if you encounter issues running the inference. Max 300\n",
+    "    batch=150 # Reduce the batch size if you encounter issues running the inference. Min 2 Max 300\n",
     ")\n",
     "volume_name = os.path.basename(volume_path)\n",
     "binary_mask_path = segformer_inference.get_mask_path(volume_name)\n",
@@ -444,27 +470,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With this approach, we achieved a dice score of `0.811` and an intersection over union (IOU) of `0.6857` on the binary masks.\n",
-    "\n",
-    "If you wish to restart training a Segformer model using the configuration from our solution, uncomment the followings lines and run the cell."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# segformer_tm.main()"
+    "With this approach, we achieved a dice score of `0.811` and an intersection over union (IOU) of `0.6857` on the binary masks."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you wish to create binary masks using Segformer model from our solution, uncomment the following line and run the cell. \n",
+    "If you wish to create binary masks using Segformer model from our solution, uncomment the following line and run the cell.\n",
     "\n",
-    "`Warning`: This is time and space consuming !"
+    "You need to run the SAM inference before or change `data/processed/test/facebook_sam-vit-base-original` -> `data/processed/test/facebook_sam-vit-base`"
    ]
   },
   {
@@ -473,12 +488,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# segformer_inf.multiprocess_make_mask(\n",
-    "#     config=config,\n",
-    "#     run=RunDemo('segformer.yml', id='mmw4795a', name='abundant-lantern-1231'),\n",
-    "#     split='test',\n",
-    "#     batch=300 # Reduce the batch size if you encounter cuda memory issues running the inference. Max 300\n",
-    "# )"
+    "run = RunDemo('segformer.yml', id='mmw4795a', name='abundant-lantern-1231')\n",
+    "list_volume = md.get_volumes(config, 'test')\n",
+    "\n",
+    "segformer_inference = segformer_inf.SegformerInference(\n",
+    "    config=config,\n",
+    "    cuda_idx=0,\n",
+    "    list_volume=list_volume,\n",
+    "    run=run,\n",
+    "    split='test',\n",
+    "    batch=5\n",
+    ")\n",
+    "\n",
+    "segformer_dir = segformer_inference.get_folder_path()\n",
+    "os.makedirs(segformer_dir, exist_ok=True)\n",
+    "segformer_inference()\n",
+    "\n",
+    "del segformer_inference"
    ]
   },
   {
@@ -573,7 +599,7 @@
     "    list_volume=[volume_path],\n",
     "    run=run,\n",
     "    split='train',\n",
-    "    batch=300 # Reduce the batch size if you encounter cuda memory issues running the inference. Max 300\n",
+    "    batch=25 # Reduce the batch size if you encounter cuda memory issues running the inference. Min 2 Max 300\n",
     ")\n",
     "volume_name = os.path.basename(volume_path)\n",
     "instance_mask_path = mask2former_inference.get_mask_path(volume_name)\n",
@@ -615,27 +641,16 @@
    "source": [
     "Since we do not want any class or background, we have chosen to set the weights of the focus loss and the cross-entropy loss to 1, while the dice loss has a weight of 10. Refer to [Hugging Face](https://huggingface.co/docs/transformers/v4.37.2/en/model_doc/mask2former#transformers.Mask2FormerForUniversalSegmentation).\n",
     "\n",
-    "With this approach, we achieved a validation loss of `0.811` on the instance masks.\n",
-    "\n",
-    "If you wish to restart training a Mask2former model using the configuration from our solution, uncomment the followings lines and run the cell."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# mask2former_tm.main()"
+    "With this approach, we achieved a validation loss of `0.811` on the instance masks."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you wish to create instance masks using Mask2former model from our solution, uncomment the following line and run the cell. \n",
+    "If you wish to create instance masks using Mask2former model from our solution, uncomment the following line and run the cell.\n",
     "\n",
-    "`Warning`: This is time and space consuming !"
+    "You need to run the Segformer inference before or change `data/processed/test/abundant-lantern-1231-mmw4795a-original` -> `data/processed/test/abundant-lantern-1231-mmw4795a`"
    ]
   },
   {
@@ -644,12 +659,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mask2former_inf.multiprocess_make_mask(\n",
-    "#     config,\n",
-    "#     run=RunDemo('mask2former.yml', id='nvbtr9k2', name='vermilion-moon-1241'),\n",
-    "#     split='test',\n",
-    "#     batch=300 # Reduce the batch size if you encounter cuda memory issues running the inference. Max 300\n",
-    "# )"
+    "run = RunDemo('mask2former.yml', id='nvbtr9k2', name='vermilion-moon-1241')\n",
+    "list_volume = md.get_volumes(config, 'test')\n",
+    "\n",
+    "mask2former_inference = mask2former_inf.Mask2formerInference(\n",
+    "    config=config,\n",
+    "    cuda_idx=0,\n",
+    "    list_volume=list_volume,\n",
+    "    run=run,\n",
+    "    split='test',\n",
+    "    batch=25\n",
+    ")\n",
+    "mask2former_dir = mask2former_inference.get_folder_path()\n",
+    "os.makedirs(mask2former_dir, exist_ok=True)\n",
+    "mask2former_inference()\n",
+    "\n",
+    "del mask2former_inference"
    ]
   },
   {
@@ -675,10 +700,8 @@
    "outputs": [],
    "source": [
     "# WandB Initialisation \n",
-    "\n",
-    "wandb_api_key = '02ca932e1203e93aaa8c97b8331d6c0b04c3170a'\n",
-    "! WANDB_MODE=offline\n",
-    "! WANDB_API_KEY={wandb_api_key}"
+    "wandb_api_key = '02ca932e1203e93aaa8c97b8331d6c0b04c3170a' # Please do not share this api key\n",
+    "! wandb login --relogin {wandb_api_key}"
    ]
   },
   {
@@ -693,32 +716,95 @@
     "import src.features.segment_anything_inference as sam_inf\n",
     "import src.features.segformer_inference as segformer_inf\n",
     "import src.features.mask2former_inference as mask2former_inf\n",
+    "import src.data.make_dataset as md\n",
     "import wandb\n",
+    "import os\n",
+    "import yaml\n",
+    "\n",
+    "# Creating a fake WandB run to make the code work.\n",
+    "\n",
+    "class RunDemo:\n",
+    "    def __init__(self, config_file, id, name) -> None:\n",
+    "        self.config = self.get_config(config_file)\n",
+    "        self.name = name\n",
+    "        self.id = id\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def get_config(config_file) -> dict:\n",
+    "        root = os.path.join('config', config_file)\n",
+    "        notebooks = os.path.join(os.pardir, root)\n",
+    "        path = root if os.path.exists(root) else notebooks\n",
+    "\n",
+    "        with open(path, 'r') as f:\n",
+    "            config = yaml.safe_load(f)\n",
+    "\n",
+    "        return config\n",
     "\n",
     "class SegmentationPipeline:\n",
-    "    def __init__(self, inference_batch_size) -> None:\n",
+    "    def __init__(self, sam_batch, segformer_batch, mask2former_batch) -> None:\n",
     "        self.config = utils.get_config()\n",
-    "        self.inference_batch_size = inference_batch_size\n",
+    "        self.sam_batch = sam_batch\n",
+    "        self.segformer_batch = segformer_batch\n",
+    "        self.mask2former_batch = mask2former_batch\n",
+    "        \n",
+    "    def make_sam_inference(self, split):\n",
+    "        sam_inference = sam_inf.SAMInference(\n",
+    "            config=self.config,\n",
+    "            cuda_idx=0,\n",
+    "            list_volume=md.get_volumes(self.config, split),\n",
+    "            run=None,\n",
+    "            split=split,\n",
+    "            batch=self.sam_batch\n",
+    "        )\n",
+    "        os.makedirs(sam_inference.get_folder_path(), exist_ok=True)\n",
+    "        sam_inference()\n",
+    "        del sam_inference\n",
+    "        \n",
+    "    def make_segformer_inference(self, split, segformer_id):\n",
+    "        segformer_inference = segformer_inf.SegformerInference(\n",
+    "            config=self.config,\n",
+    "            cuda_idx=0,\n",
+    "            list_volume=md.get_volumes(self.config, split),\n",
+    "            run=RunDemo('segformer.yml', **segformer_id),\n",
+    "            split=split,\n",
+    "            batch=self.sam_batch\n",
+    "        )\n",
+    "        os.makedirs(segformer_inference.get_folder_path(), exist_ok=True)\n",
+    "        segformer_inference()\n",
+    "        del segformer_inference\n",
+    "        \n",
+    "    def make_mask2former_inference(self, split, mask2former_id):\n",
+    "        mask2former_inference = mask2former_inf.Mask2formerInference(\n",
+    "            config=self.config,\n",
+    "            cuda_idx=0,\n",
+    "            list_volume=md.get_volumes(self.config, split),\n",
+    "            run=RunDemo('mask2former.yml', **mask2former_id),\n",
+    "            split=split,\n",
+    "            batch=self.sam_batch\n",
+    "        )\n",
+    "        os.makedirs(mask2former_inference.get_folder_path(), exist_ok=True)\n",
+    "        mask2former_inference()\n",
+    "        del mask2former_inference\n",
     "    \n",
     "    def train(self):\n",
-    "        sam_inf.multiprocess_make_mask(\n",
-    "            config=self.config,\n",
-    "            run=RunDemo('segment_anything.yml'),\n",
-    "            split='train'\n",
-    "        )\n",
+    "        print('Create Segment Anything binary masks...')\n",
+    "        self.make_sam_inference(split='train')\n",
+    "        print('Segment Anything binary masks done!')\n",
+    "        print('Train Segformer...')\n",
     "        segformer_id = self.train_segformer()\n",
-    "        segformer_inf.multiprocess_make_mask(\n",
-    "            config=self.config,\n",
-    "            run=RunDemo('segformer.yml', **segformer_id),\n",
-    "            split='train'\n",
-    "        )\n",
+    "        print('Segformer training finished!')\n",
+    "        print('Create Segformer binary masks...')\n",
+    "        self.make_segformer_inference(split='train', segformer_id=segformer_id)\n",
+    "        print('Segformer binary masks done!')\n",
+    "        print('Train Mask2former')\n",
     "        mask2former_id = self.train_mask2former(segformer_id)\n",
-    "\n",
+    "        print('Mask2former training finished!')\n",
+    "        \n",
     "        return {'segformer_id': segformer_id, 'mask2former_id': mask2former_id}\n",
     "    \n",
     "    def train_segformer(self):\n",
     "        wandb_config = utils.init_wandb('segformer.yml')\n",
-    "        segformer_id = {'name': wandb.name, 'id': wandb.id}\n",
+    "        segformer_id = {'name': wandb.run.name, 'id': wandb.run.id}\n",
     "        trainer = segformer_tm.get_trainer(self.config)\n",
     "        lightning = segformer_tm.get_lightning(self.config, wandb_config)\n",
     "        trainer.fit(model=lightning)\n",
@@ -730,7 +816,7 @@
     "        utils.init_wandb('segformer.yml')\n",
     "        wandb.config.update(segformer_id=f'{segformer_id[\"name\"]}-{segformer_id[\"id\"]}')\n",
     "        wandb_config = wandb.config\n",
-    "        mask2former_id = f'{wandb.name}-{wandb.id}'\n",
+    "        mask2former_id = {'name': wandb.run.name, 'id': wandb.run.id}\n",
     "        trainer = mask2former_tm.get_trainer(self.config)\n",
     "        lightning = mask2former_tm.get_lightning(self.config, wandb_config)\n",
     "        trainer.fit(model=lightning)\n",
@@ -738,23 +824,28 @@
     "        \n",
     "        return mask2former_id\n",
     "    \n",
-    "    def predict(self, sam_id, segformer_id, mask2former_id):\n",
-    "        sam_inf.multiprocess_make_mask(\n",
-    "            config=self.config,\n",
-    "            run=RunDemo('segformer.yml', **sam_id),\n",
-    "            split='test'\n",
-    "        )\n",
-    "        segformer_inf.multiprocess_make_mask(\n",
-    "            config=self.config,\n",
-    "            run=RunDemo('segformer.yml', **segformer_id),\n",
-    "            split='test'\n",
-    "        )\n",
-    "        mask2former_inf.multiprocess_make_mask(\n",
-    "            config=self.config,\n",
-    "            run=RunDemo('mask2former.yml', **mask2former_id),\n",
-    "            split='test'\n",
-    "        )\n",
-    "        pass"
+    "    def predict(self, segformer_id, mask2former_id):\n",
+    "        print('Create Segment Anything binary masks...')\n",
+    "        self.make_sam_inference(split='test')\n",
+    "        print('Segment Anything binary masks done!')\n",
+    "        print('Create Segformer binary masks...')\n",
+    "        self.make_segformer_inference(split='test', segformer_id=segformer_id)\n",
+    "        print('Segformer binary masks done!')\n",
+    "        print('Create Mask2former instance masks...')\n",
+    "        self.make_mask2former_inference(split='test', mask2former_id=mask2former_id)\n",
+    "        print('Mask2former instance masks done!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# batch size  Min 2 Max 300\n",
+    "segmentation_pipeline = SegmentationPipeline(sam_batch=5, segformer_batch=150, mask2former_batch=25)\n",
+    "segmentation_pipeline.train()\n",
+    "# segmentation_pipeline.predict()"
    ]
   }
  ],
