feat: all working except segmentation_pipeline.train()

--- a/0.0-rosia-segmenting-subsurface.ipynb
+++ b/0.0-rosia-segmenting-subsurface.ipynb
@@ -429,7 +429,7 @@
     "    list_volume=[volume_path],\n",
     "    run=run,\n",
     "    split='train',\n",
-    "    batch=150 # Reduce the batch size if you encounter issues running the inference. Min 2 Max 300\n",
+    "    batch=50 # Reduce the batch size if you encounter issues running the inference. Min 2 Max 300\n",
     ")\n",
     "volume_name = os.path.basename(volume_path)\n",
     "binary_mask_path = segformer_inference.get_mask_path(volume_name)\n",
@@ -497,7 +497,7 @@
     "    list_volume=list_volume,\n",
     "    run=run,\n",
     "    split='test',\n",
-    "    batch=5\n",
+    "    batch=50\n",
     ")\n",
     "\n",
     "segformer_dir = segformer_inference.get_folder_path()\n",
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,11 +810,12 @@
     "        trainer.fit(model=lightning)\n",
     "        wandb.finish()\n",
     "        \n",
+    "        del trainer, lightning\n",
     "        return segformer_id\n",
     "    \n",
     "    def train_mask2former(self, segformer_id):\n",
-    "        utils.init_wandb('segformer.yml')\n",
-    "        wandb.config.update(segformer_id=f'{segformer_id[\"name\"]}-{segformer_id[\"id\"]}')\n",
+    "        utils.init_wandb('mask2former.yml')\n",
+    "        wandb.config.update(dict(model_mask_id=f'{segformer_id[\"name\"]}-{segformer_id[\"id\"]}'))\n",
     "        wandb_config = wandb.config\n",
     "        mask2former_id = {'name': wandb.run.name, 'id': wandb.run.id}\n",
     "        trainer = mask2former_tm.get_trainer(self.config)\n",
@@ -822,6 +823,7 @@
     "        trainer.fit(model=lightning)\n",
     "        wandb.finish()\n",
     "        \n",
+    "        del trainer, lightning\n",
     "        return mask2former_id\n",
     "    \n",
     "    def predict(self, segformer_id, mask2former_id):\n",
@@ -843,9 +845,93 @@
    "outputs": [],
    "source": [
     "# batch size  Min 2 Max 300\n",
-    "segmentation_pipeline = SegmentationPipeline(sam_batch=5, segformer_batch=150, mask2former_batch=25)\n",
-    "segmentation_pipeline.train()\n",
-    "# segmentation_pipeline.predict()"
+    "segmentation_pipeline = SegmentationPipeline(sam_batch=5, segformer_batch=50, mask2former_batch=25)\n",
+    "# To predict with our solution\n",
+    "segmentation_pipeline.predict(\n",
+    "    segformer_id=dict(id='mmw4795a', name='abundant-lantern-1231'),\n",
+    "    mask2former_id=dict(id='nvbtr9k2', name='vermilion-moon-1241'),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Create Segment Anything binary masks...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4/4 [00:00<00:00, 33689.19it/s]\n",
+      "Could not find image processor class in the image processor config or the model config. Loading based on pattern matching with the model's feature extractor configuration. Please open a PR/issue to update `preprocessor_config.json` to use `image_processor_type` instead of `feature_extractor_type`. This warning will be removed in v4.40.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Segment Anything binary masks done!\n",
+      "Create Segformer binary masks...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Could not find image processor class in the image processor config or the model config. Loading based on pattern matching with the model's feature extractor configuration. Please open a PR/issue to update `preprocessor_config.json` to use `image_processor_type` instead of `feature_extractor_type`. This warning will be removed in v4.40.\n",
+      "Some weights of SegformerForSemanticSegmentation were not initialized from the model checkpoint at nvidia/segformer-b0-finetuned-ade-512-512 and are newly initialized because the shapes did not match:\n",
+      "- decode_head.classifier.bias: found shape torch.Size([150]) in the checkpoint and torch.Size([1]) in the model instantiated\n",
+      "- decode_head.classifier.weight: found shape torch.Size([150, 256, 1, 1]) in the checkpoint and torch.Size([1, 256, 1, 1]) in the model instantiated\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "100%|██████████| 4/4 [00:00<00:00, 33091.16it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Segformer binary masks done!\n",
+      "Create Mask2former instance masks...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of Mask2FormerForUniversalSegmentation were not initialized from the model checkpoint at facebook/mask2former-swin-base-coco-instance and are newly initialized because the shapes did not match:\n",
+      "- class_predictor.bias: found shape torch.Size([81]) in the checkpoint and torch.Size([2]) in the model instantiated\n",
+      "- class_predictor.weight: found shape torch.Size([81, 256]) in the checkpoint and torch.Size([2, 256]) in the model instantiated\n",
+      "- criterion.empty_weight: found shape torch.Size([81]) in the checkpoint and torch.Size([2]) in the model instantiated\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "100%|██████████| 4/4 [00:00<00:00, 20560.31it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mask2former instance masks done!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# To train and predict new models\n",
+    "models_id = segmentation_pipeline.train()\n",
+    "segmentation_pipeline.predict(**models_id)"
    ]
   }
  ],
