feat: running version of the notebook

--- a/0.0-rosia-segmenting-subsurface.ipynb
+++ b/0.0-rosia-segmenting-subsurface.ipynb
@@ -258,32 +258,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating a fake WandB run to make the code work.\n",
-    "\n",
-    "class RunDemo:\n",
-    "    def __init__(self, config_file, id, name) -> None:\n",
-    "        self.config = self.get_config(config_file)\n",
-    "        self.name = name\n",
-    "        self.id = id\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def get_config(config_file) -> dict:\n",
-    "        root = os.path.join('config', config_file)\n",
-    "        notebooks = os.path.join(os.pardir, root)\n",
-    "        path = root if os.path.exists(root) else notebooks\n",
-    "\n",
-    "        with open(path, 'r') as f:\n",
-    "            config = yaml.safe_load(f)\n",
-    "\n",
-    "        return config"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Using the SAM inference class to make predictions on the volume.\n",
     "\n",
     "sam_inference = sam_inf.SAMInference(\n",
@@ -304,7 +278,8 @@
     "\n",
     "\n",
     "# Deleting the instance to free up memory space.\n",
-    "del sam_inference, binary_mask"
+    "del sam_inference, binary_mask\n",
+    "torch.cuda.empty_cache()"
    ]
   },
   {
@@ -358,7 +333,8 @@
     "os.makedirs(sam_dir, exist_ok=True)\n",
     "sam_inference()\n",
     "\n",
-    "del sam_inference"
+    "del sam_inference\n",
+    "torch.cuda.empty_cache()"
    ]
   },
   {
@@ -421,7 +397,7 @@
    "source": [
     "# Using the Segformer inference class to make predictions on the volume.\n",
     "\n",
-    "run = RunDemo('segformer.yml', id='mmw4795a', name='abundant-lantern-1231')\n",
+    "run = utils.RunDemo('segformer.yml', id='mmw4795a', name='abundant-lantern-1231')\n",
     "\n",
     "segformer_inference = segformer_inf.SegformerInference(\n",
     "    config=config,\n",
@@ -441,7 +417,8 @@
     "\n",
     "\n",
     "# Deleting the instance to free up memory space.\n",
-    "del segformer_inference, binary_mask"
+    "del segformer_inference, binary_mask\n",
+    "torch.cuda.empty_cache()"
    ]
   },
   {
@@ -488,7 +465,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run = RunDemo('segformer.yml', id='mmw4795a', name='abundant-lantern-1231')\n",
+    "run = utils.RunDemo('segformer.yml', id='mmw4795a', name='abundant-lantern-1231')\n",
     "list_volume = md.get_volumes(config, 'test')\n",
     "\n",
     "segformer_inference = segformer_inf.SegformerInference(\n",
@@ -504,7 +481,9 @@
     "os.makedirs(segformer_dir, exist_ok=True)\n",
     "segformer_inference()\n",
     "\n",
-    "del segformer_inference"
+    "\n",
+    "del segformer_inference\n",
+    "torch.cuda.empty_cache()"
    ]
   },
   {
@@ -591,7 +570,7 @@
    "source": [
     "# Using the Mask2former inference class to make predictions on the volume.\n",
     "\n",
-    "run = RunDemo('mask2former.yml', id='nvbtr9k2', name='vermilion-moon-1241')\n",
+    "run = utils.RunDemo('mask2former.yml', id='nvbtr9k2', name='vermilion-moon-1241')\n",
     "\n",
     "mask2former_inference = mask2former_inf.Mask2formerInference(\n",
     "    config=config,\n",
@@ -610,7 +589,8 @@
     "instance_mask = np.load(instance_mask_path, allow_pickle=True)\n",
     "intance_pred = instance_mask[slice_idx, :, :].T\n",
     "\n",
-    "del mask2former_inference, instance_mask"
+    "del mask2former_inference, instance_mask\n",
+    "torch.cuda.empty_cache()"
    ]
   },
   {
@@ -659,7 +639,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run = RunDemo('mask2former.yml', id='nvbtr9k2', name='vermilion-moon-1241')\n",
+    "run = utils.RunDemo('mask2former.yml', id='nvbtr9k2', name='vermilion-moon-1241')\n",
     "list_volume = md.get_volumes(config, 'test')\n",
     "\n",
     "mask2former_inference = mask2former_inf.Mask2formerInference(\n",
@@ -674,7 +654,8 @@
     "os.makedirs(mask2former_dir, exist_ok=True)\n",
     "mask2former_inference()\n",
     "\n",
-    "del mask2former_inference"
+    "del mask2former_inference\n",
+    "torch.cuda.empty_cache()"
    ]
   },
   {
@@ -706,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,26 +700,11 @@
     "import src.data.make_dataset as md\n",
     "import wandb\n",
     "import os\n",
-    "import yaml\n",
+    "import torch\n",
+    "import warnings\n",
     "\n",
-    "# Creating a fake WandB run to make the code work.\n",
-    "\n",
-    "class RunDemo:\n",
-    "    def __init__(self, config_file, id, name) -> None:\n",
-    "        self.config = self.get_config(config_file)\n",
-    "        self.name = name\n",
-    "        self.id = id\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def get_config(config_file) -> dict:\n",
-    "        root = os.path.join('config', config_file)\n",
-    "        notebooks = os.path.join(os.pardir, root)\n",
-    "        path = root if os.path.exists(root) else notebooks\n",
-    "\n",
-    "        with open(path, 'r') as f:\n",
-    "            config = yaml.safe_load(f)\n",
-    "\n",
-    "        return config\n",
+    "warnings.filterwarnings('ignore')\n",
+    "torch.set_float32_matmul_precision('medium')\n",
     "\n",
     "class SegmentationPipeline:\n",
     "    def __init__(self, sam_batch, segformer_batch, mask2former_batch) -> None:\n",
@@ -759,32 +725,35 @@
     "        os.makedirs(sam_inference.get_folder_path(), exist_ok=True)\n",
     "        sam_inference()\n",
     "        del sam_inference\n",
+    "        torch.cuda.empty_cache()\n",
     "        \n",
     "    def make_segformer_inference(self, split, segformer_id):\n",
     "        segformer_inference = segformer_inf.SegformerInference(\n",
     "            config=self.config,\n",
     "            cuda_idx=0,\n",
     "            list_volume=md.get_volumes(self.config, split),\n",
-    "            run=RunDemo('segformer.yml', **segformer_id),\n",
+    "            run=utils.RunDemo('segformer.yml', **segformer_id),\n",
     "            split=split,\n",
     "            batch=self.sam_batch\n",
     "        )\n",
     "        os.makedirs(segformer_inference.get_folder_path(), exist_ok=True)\n",
     "        segformer_inference()\n",
     "        del segformer_inference\n",
+    "        torch.cuda.empty_cache()\n",
     "        \n",
     "    def make_mask2former_inference(self, split, mask2former_id):\n",
     "        mask2former_inference = mask2former_inf.Mask2formerInference(\n",
     "            config=self.config,\n",
     "            cuda_idx=0,\n",
     "            list_volume=md.get_volumes(self.config, split),\n",
-    "            run=RunDemo('mask2former.yml', **mask2former_id),\n",
+    "            run=utils.RunDemo('mask2former.yml', **mask2former_id),\n",
     "            split=split,\n",
     "            batch=self.sam_batch\n",
     "        )\n",
     "        os.makedirs(mask2former_inference.get_folder_path(), exist_ok=True)\n",
     "        mask2former_inference()\n",
     "        del mask2former_inference\n",
+    "        torch.cuda.empty_cache()\n",
     "    \n",
     "    def train(self):\n",
     "        print('Create Segment Anything binary masks...')\n",
@@ -811,6 +780,8 @@
     "        wandb.finish()\n",
     "        \n",
     "        del trainer, lightning\n",
+    "        torch.cuda.empty_cache()\n",
+    "        \n",
     "        return segformer_id\n",
     "    \n",
     "    def train_mask2former(self, segformer_id):\n",
@@ -824,6 +795,8 @@
     "        wandb.finish()\n",
     "        \n",
     "        del trainer, lightning\n",
+    "        torch.cuda.empty_cache()\n",
+    "        \n",
     "        return mask2former_id\n",
     "    \n",
     "    def predict(self, segformer_id, mask2former_id):\n",
@@ -850,88 +823,26 @@
     "segmentation_pipeline.predict(\n",
     "    segformer_id=dict(id='mmw4795a', name='abundant-lantern-1231'),\n",
     "    mask2former_id=dict(id='nvbtr9k2', name='vermilion-moon-1241'),\n",
-    ")"
+    ")\n",
+    "\n",
+    "del segmentation_pipeline\n",
+    "torch.cuda.empty_cache()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Create Segment Anything binary masks...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 4/4 [00:00<00:00, 33689.19it/s]\n",
-      "Could not find image processor class in the image processor config or the model config. Loading based on pattern matching with the model's feature extractor configuration. Please open a PR/issue to update `preprocessor_config.json` to use `image_processor_type` instead of `feature_extractor_type`. This warning will be removed in v4.40.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Segment Anything binary masks done!\n",
-      "Create Segformer binary masks...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Could not find image processor class in the image processor config or the model config. Loading based on pattern matching with the model's feature extractor configuration. Please open a PR/issue to update `preprocessor_config.json` to use `image_processor_type` instead of `feature_extractor_type`. This warning will be removed in v4.40.\n",
-      "Some weights of SegformerForSemanticSegmentation were not initialized from the model checkpoint at nvidia/segformer-b0-finetuned-ade-512-512 and are newly initialized because the shapes did not match:\n",
-      "- decode_head.classifier.bias: found shape torch.Size([150]) in the checkpoint and torch.Size([1]) in the model instantiated\n",
-      "- decode_head.classifier.weight: found shape torch.Size([150, 256, 1, 1]) in the checkpoint and torch.Size([1, 256, 1, 1]) in the model instantiated\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "100%|██████████| 4/4 [00:00<00:00, 33091.16it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Segformer binary masks done!\n",
-      "Create Mask2former instance masks...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of Mask2FormerForUniversalSegmentation were not initialized from the model checkpoint at facebook/mask2former-swin-base-coco-instance and are newly initialized because the shapes did not match:\n",
-      "- class_predictor.bias: found shape torch.Size([81]) in the checkpoint and torch.Size([2]) in the model instantiated\n",
-      "- class_predictor.weight: found shape torch.Size([81, 256]) in the checkpoint and torch.Size([2, 256]) in the model instantiated\n",
-      "- criterion.empty_weight: found shape torch.Size([81]) in the checkpoint and torch.Size([2]) in the model instantiated\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "100%|██████████| 4/4 [00:00<00:00, 20560.31it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mask2former instance masks done!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# batch size  Min 2 Max 300\n",
+    "segmentation_pipeline = SegmentationPipeline(sam_batch=5, segformer_batch=50, mask2former_batch=25)\n",
     "# To train and predict new models\n",
     "models_id = segmentation_pipeline.train()\n",
-    "segmentation_pipeline.predict(**models_id)"
+    "segmentation_pipeline.predict(**models_id)\n",
+    "\n",
+    "del segmentation_pipeline\n",
+    "torch.cuda.empty_cache()"
    ]
   }
  ],
