--- a/0.0-rosia-segmenting-subsurface.ipynb
+++ b/0.0-rosia-segmenting-subsurface.ipynb
@@ -50,9 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pip install -e.\n",
-    "% load_ext autoreload\n",
-    "% autoreload 2"
+    "! pip install -e ."
    ]
   },
   {
@@ -611,12 +609,14 @@
     "        del segformer_inference\n",
     "        torch.cuda.empty_cache()\n",
     "\n",
-    "    def make_mask2former_inference(self, split, mask2former_id):\n",
+    "    def make_mask2former_inference(self, split, mask2former_id, segformer_id):\n",
+    "        run = utils.RunDemo('mask2former.yml', **mask2former_id)\n",
+    "        run.config['model_mask_id'] = f'{segformer_id[\"name\"]}-{segformer_id[\"id\"]}'\n",
     "        mask2former_inference = mask2former_inf.Mask2formerInference(\n",
     "            config=self.config,\n",
     "            cuda_idx=0,\n",
     "            list_volume=md.get_volumes(self.config, split),\n",
-    "            run=utils.RunDemo('mask2former.yml', **mask2former_id),\n",
+    "            run=run,\n",
     "            split=split,\n",
     "            batch=self.sam_batch\n",
     "        )\n",
@@ -682,8 +682,10 @@
     "        self.make_segformer_inference(split='test', segformer_id=segformer_id)\n",
     "        print('Segformer binary masks done!')\n",
     "        print('Create Mask2former instance masks...')\n",
-    "        self.make_mask2former_inference(split='test', mask2former_id=mask2former_id)\n",
-    "        print('Mask2former instance masks done!')"
+    "        self.make_mask2former_inference(split='test', mask2former_id=mask2former_id, segformer_id=segformer_id)\n",
+    "        print('Mask2former instance masks done!')\n",
+    "        \n",
+    "        print(f'\\nResults are saved in data/processed/{mask2former_id[\"name\"]}-{mask2former_id[\"id\"]}/test.')"
    ]
   },
   {
@@ -762,7 +764,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
